[refactor] Move NoticeResponseDTO conversion logic
- service 내에서는 service 로직만 작동되도록 수정.